# SuperActivators

./: .gitignore  CCE-for-CLS.ipynb  Compare-Methods.ipynb  Expand-Ethos.ipynb  Generate-Text-Datasets.ipynb  Preprocess-Metadata.ipynb  README.md  Superdetector-Inversion.ipynb  Text-Concepts.ipynb  Visualize-Dataset.ipynb  all_inversion_stats.py  comprehensive_pipeline_status.py  compute_image_concepts.py  detect_all_superpatches_unsupervised.py  embed_image_datasets.py  emotion.py  pyproject.toml  requirements.txt  run_concept_learning.py  run_image_activation_analysis.py  run_kmeans_linsep.py  supervised_pipeline.py  unsupervised_pipeline.py  utils.py
CCE_src/: concept_learning.py  nmf.py  silhouette.py
notebooks/: Preprocess-Metadata.ipynb  Qual-Over-Layers.ipynb  Text-Concepts.ipynb  Visualize-Dataset.ipynb
scripts/: activation_distributions.py  activation_memory_management.py  all_detection_stats.py  all_inversion_stats.py  all_inversion_stats_chunked.py  baseline_detections.py  baselines.py  check_embedding_sizes.py  compute_activations.py  compute_all_concepts.py  compute_concepts_alignments.py  compute_gt_patches.py  compute_image_gt_samples.py  compute_patch_cls_activations.py  correlations_w_labels.py  detection_errors.py  detection_stats.py  embed_image_datasets.py  embed_text_datasets.py  embeddings_memory_management.py  extract_embedding_stats.py  extract_prompt_concepts.py  extract_prompt_concepts_fixed.py  extract_prompt_concepts_small.py  generate_percentthrumodel_mappings.py  hybrid_concept_analysis.py  hybrid_concept_analysis_OLD.py  (+9 more)
(+120 files in other folders)
