[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = ""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.11"
dependencies = [
    "tqdm",
    "pandas",
    "matplotlib",
    "openai",
    "vllm",
    "accelerate>=0.26.0",
    "seaborn",
    "scikit-learn",
    "pycocotools",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]